--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{
 	}
 	
 #landingpage{
-	background-image: url("siargao.gif");
+	background-image: url("Siargao.gif");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -164,7 +164,7 @@ h2{
           <a class="nav-link" href="location.html">Location</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contacts</a>
+          <a class="nav-link" href="Contacts.html">Contacts</a>
         </li>
           </div>
         </li>
