--- a/rates.html
+++ b/rates.html
@@ -203,7 +203,7 @@ p {
           <a class="nav-link" href="location.html">Location</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contacts</a>
+          <a class="nav-link" href="Contacts.html">Contacts</a>
         </li>
           </div>
         </li>
@@ -240,7 +240,7 @@ p {
 			<div class="description">Rusi</div>
 		</div>
 		<div class="photo">
-			<img src="motor 6.jpeg" alt="Photo 6">
+			<img src="MOTOR 6.jpeg" alt="Photo 6">
 			<div class="description">KTM</div>
 		</div>
 		</div>
