--- a/Contacts.html
+++ b/Contacts.html
@@ -150,7 +150,7 @@ h3 {
           <a class="nav-link" href="location.html">Location</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contacts</a>
+          <a class="nav-link" href="Contacts.html">Contacts</a>
         </li>
           </div>
         </li>
