--- a/gallery.html
+++ b/gallery.html
@@ -175,7 +175,7 @@ iframe {
           <a class="nav-link" href="location.html">Location</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contacts</a>
+          <a class="nav-link" href="Contacts.html">Contacts</a>
         </li>
           </div>
         </li>
