--- a/others.html
+++ b/others.html
@@ -200,7 +200,7 @@ p {
           <a class="nav-link" href="location.html">Location</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contacts</a>
+          <a class="nav-link" href="Contacts.html">Contacts</a>
         </li>
           </div>
         </li>
