--- a/services.html
+++ b/services.html
@@ -203,7 +203,7 @@ p {
           <a class="nav-link" href="location.html">Location</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contacts</a>
+          <a class="nav-link" href="Contacts.html">Contacts</a>
         </li>
           </div>
         </li>
