--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@ body{
 	}
 	
 #landingpage{
-	background-image: url("Siargao.gif");
+	background-image: url("siargao.gif");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 	width:100%;
-	
 	}
 
 #caption{
