--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{
 	}
 	
 #landingpage{
-	background-image: url("siargao.gif");
+	background-image: url("s.gif");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
