--- a/services.html
+++ b/services.html
@@ -240,7 +240,7 @@ p {
 			<div class="description">Rusi</div>
 		</div>
 		<div class="photo">
-			<img src="MOTOR 6.jpeg" alt="Photo 6">
+			<img src="motor 6.jpeg" alt="Photo 6">
 			<div class="description">KTM</div>
 		</div>
 		</div> <br><br>
