--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{
 	}
 	
 #landingpage{
-	background-image: url("s.gif");
+	background-image: url("sg.gif");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -99,7 +99,7 @@ h2{
 	margin: 4px 2px;
 	border-radius: 10px;
 	cursor: pointer;
-	top: 90%;
+	top: 70%;
 	left: 48%;
 }
 
