--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ h2{
        <li class="image"> <a href="gallery.html"> <img src="2.png" height="550px"alt="2"> </a> </li>
        <li class="image"> <a href="services.html"> <img src="3.png" height="550px"alt="3"> </a> </li>
        <li class="image"> <a href="location.html"> <img src="4.png" height="550px"alt="4"> </a> </li>
-       <li class="image"> <a href="contacts.html"> <img src="5.png" height="550px"alt="5"> </a> </li>
+       <li class="image"> <a href="Contacts.html"> <img src="5.png" height="550px"alt="5"> </a> </li>
 	</ul>
     </div>
   
