--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{
 	}
 	
 #landingpage{
-	background-image: url("sg.gif");
+	background-image: url("s.gif");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -99,7 +99,7 @@ h2{
 	margin: 4px 2px;
 	border-radius: 10px;
 	cursor: pointer;
-	top: 70%;
+	top: 90%;
 	left: 48%;
 }
 
@@ -170,7 +170,7 @@ h2{
       </ul>
     </div>
   </nav>
-  <img src="siargao.gif" alt="siargao" id="landingpage">
+  <img src="s.gif" alt="s" id="landingpage">
   <h1 id="caption"> Life is a journey <br> Travel with style, comfort <br>and convenience <br></h1>
   <a href="location.html"> <div id="button">Visit us !</div> </a> <br><br>
   <h2> Make every adventure a memory to remember </h2>
